--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -2,24 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-26deaee58364>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mendpoints\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import math\n",
+    "\n",
+    "\n",
     "file = open(\"kittens.in\", \"r\")\n",
     "params = list (map (int , file.readline().split()))\n",
     "V = params[0]\n",
@@ -29,10 +24,13 @@
     "X = params[4]\n",
     "\n",
     "videos = list (map (int , file.readline().split()))\n",
-    "endpoints = \n",
+    "endpoints = np.zeros(E)\n",
     "\n",
     "for i in range(0, E):\n",
-    "    endpoints += 1\n",
+    "    e = list (map (int , file.readline().split()))\n",
+    "    f = list (map (int , file.readlines().split()))\n",
+    "    endpoints[i] += 1\n",
+    "    \n",
     "\n"
    ]
   },
@@ -55,12 +53,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import math\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('/home/felix/anaconda2/hashcode/kittens.in')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>10000 1000 200000 500 6000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>936 564 1 246 665 465 347 33 834 688 331 996 8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1645 392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0 41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1 497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3 337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4 15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7 270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8 61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13 39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>14 237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>15 426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>17 43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>18 246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>19 176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>21 259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>23 392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>24 387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>25 374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>26 262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>28 350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>29 467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>30 113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>31 100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>32 418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>34 181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>36 425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>37 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>38 162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>39 83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552852</th>\n",
+       "      <td>2018 794 2486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552853</th>\n",
+       "      <td>3755 439 2624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552854</th>\n",
+       "      <td>5629 741 8192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552855</th>\n",
+       "      <td>4916 990 2151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552856</th>\n",
+       "      <td>4156 987 9171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552857</th>\n",
+       "      <td>6807 866 7428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552858</th>\n",
+       "      <td>6595 586 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552859</th>\n",
+       "      <td>236 633 4944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552860</th>\n",
+       "      <td>4733 587 642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552861</th>\n",
+       "      <td>2718 457 1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552862</th>\n",
+       "      <td>8365 95 3998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552863</th>\n",
+       "      <td>1967 954 2815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552864</th>\n",
+       "      <td>400 271 7306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552865</th>\n",
+       "      <td>7634 559 2162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552866</th>\n",
+       "      <td>4837 130 9877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552867</th>\n",
+       "      <td>3948 619 4061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552868</th>\n",
+       "      <td>8153 827 5742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552869</th>\n",
+       "      <td>767 365 7239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552870</th>\n",
+       "      <td>4382 397 558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552871</th>\n",
+       "      <td>4612 996 5001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552872</th>\n",
+       "      <td>8634 671 1845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552873</th>\n",
+       "      <td>2186 826 9043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552874</th>\n",
+       "      <td>9873 33 3024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552875</th>\n",
+       "      <td>5790 833 4918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552876</th>\n",
+       "      <td>8687 709 6095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552877</th>\n",
+       "      <td>1152 444 2255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552878</th>\n",
+       "      <td>251 361 2128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552879</th>\n",
+       "      <td>8566 637 6854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552880</th>\n",
+       "      <td>3253 47 9626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552881</th>\n",
+       "      <td>7055 308 1947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>552882 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               10000 1000 200000 500 6000\n",
+       "0       936 564 1 246 665 465 347 33 834 688 331 996 8...\n",
+       "1                                                1645 392\n",
+       "2                                                    0 41\n",
+       "3                                                   1 497\n",
+       "4                                                   3 337\n",
+       "5                                                    4 15\n",
+       "6                                                   7 270\n",
+       "7                                                    8 61\n",
+       "8                                                    12 1\n",
+       "9                                                   13 39\n",
+       "10                                                 14 237\n",
+       "11                                                 15 426\n",
+       "12                                                  17 43\n",
+       "13                                                 18 246\n",
+       "14                                                 19 176\n",
+       "15                                                 21 259\n",
+       "16                                                 23 392\n",
+       "17                                                 24 387\n",
+       "18                                                 25 374\n",
+       "19                                                 26 262\n",
+       "20                                                 28 350\n",
+       "21                                                 29 467\n",
+       "22                                                 30 113\n",
+       "23                                                 31 100\n",
+       "24                                                 32 418\n",
+       "25                                                 34 181\n",
+       "26                                                 36 425\n",
+       "27                                                   37 3\n",
+       "28                                                 38 162\n",
+       "29                                                  39 83\n",
+       "...                                                   ...\n",
+       "552852                                      2018 794 2486\n",
+       "552853                                      3755 439 2624\n",
+       "552854                                      5629 741 8192\n",
+       "552855                                      4916 990 2151\n",
+       "552856                                      4156 987 9171\n",
+       "552857                                      6807 866 7428\n",
+       "552858                                        6595 586 40\n",
+       "552859                                       236 633 4944\n",
+       "552860                                       4733 587 642\n",
+       "552861                                      2718 457 1995\n",
+       "552862                                       8365 95 3998\n",
+       "552863                                      1967 954 2815\n",
+       "552864                                       400 271 7306\n",
+       "552865                                      7634 559 2162\n",
+       "552866                                      4837 130 9877\n",
+       "552867                                      3948 619 4061\n",
+       "552868                                      8153 827 5742\n",
+       "552869                                       767 365 7239\n",
+       "552870                                       4382 397 558\n",
+       "552871                                      4612 996 5001\n",
+       "552872                                      8634 671 1845\n",
+       "552873                                      2186 826 9043\n",
+       "552874                                       9873 33 3024\n",
+       "552875                                      5790 833 4918\n",
+       "552876                                      8687 709 6095\n",
+       "552877                                      1152 444 2255\n",
+       "552878                                       251 361 2128\n",
+       "552879                                      8566 637 6854\n",
+       "552880                                       3253 47 9626\n",
+       "552881                                      7055 308 1947\n",
+       "\n",
+       "[552882 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
   },
   {
    "cell_type": "code",
@@ -88,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
