--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
-    "import math\n",
-    "\n",
     "\n",
     "file = open(\"kittens.in\", \"r\")\n",
     "params = list (map (int , file.readline().split()))\n",
@@ -24,19 +21,27 @@
     "X = params[4]\n",
     "\n",
     "videos = list (map (int , file.readline().split()))\n",
-    "endpoints = np.zeros(E)\n",
+    "endpoints = []\n",
     "\n",
     "for i in range(0, E):\n",
     "    e = list (map (int , file.readline().split()))\n",
-    "    f = list (map (int , file.readlines().split()))\n",
-    "    endpoints[i] += 1\n",
+    "    f = []\n",
+    "    for j in range(0 , e[1]):\n",
+    "        f += [list (map (int , file.readline().split()))]\n",
+    "    endpoints += [f]\n",
     "    \n",
-    "\n"
+    "requests = np.zeros((V , E))\n",
+    "\n",
+    "for i in range(0 , R):\n",
+    "    request = list (map (int , file.readline().split()))\n",
+    "    requests[request[0],request[1]] += request[2]\n",
+    "\n",
+    "requests[0,0] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -45,11 +50,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000\n"
+      "[[ 1.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(requests)"
+   ]
   },
   {
    "cell_type": "code",
@@ -59,10 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import scipy as sp\n",
-    "import math\n",
+    "\n",
     "\n"
    ]
   },
@@ -447,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
