--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -68,6 +68,8 @@
     "        if caches[cache_list.ix[j,0]] >= videos[sorted_requests.ix[i,0]]:\n",
     "            caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
     "            if cache_list.ix[j,0] in results:\n",
+    "                if videos[sorted_requests.ix[i,0]] in results[cache_list.ix[j,0]]:\n",
+    "                    break\n",
     "                results[cache_list.ix[j,0]] = results[cache_list.ix[j,0]] + [sorted_requests.ix[i,0]]\n",
     "            else:\n",
     "                results[cache_list.ix[j,0]] = [sorted_requests.ix[i,0]]\n",
