--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -66,12 +66,13 @@
     "    cache_list = endpoint_frames[sorted_requests.ix[i,1]]\n",
     "    for j in range(0 , len(cache_list.index)):\n",
     "        if caches[cache_list.ix[j,0]] >= videos[sorted_requests.ix[i,0]]:\n",
-    "            caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
     "            if cache_list.ix[j,0] in results:\n",
-    "                if videos[sorted_requests.ix[i,0]] in results[cache_list.ix[j,0]]:\n",
+    "                if sorted_requests.ix[i,0] in results[cache_list.ix[j,0]]:\n",
     "                    break\n",
+    "                caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
     "                results[cache_list.ix[j,0]] = results[cache_list.ix[j,0]] + [sorted_requests.ix[i,0]]\n",
     "            else:\n",
+    "                caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
     "                results[cache_list.ix[j,0]] = [sorted_requests.ix[i,0]]\n",
     "            break"
    ]
