Added Haskell version of code

--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -30,8 +30,18 @@
     "    e = list (map (int , file.readline().split()))\n",
     "    f = []\n",
     "    for j in range(0 , e[1]):\n",
-    "        f += [list (map (int , file.readline().split()))]\n",
+    "        listing = list (map (int , file.readline().split()))\n",
+    "        diff_listing = [listing[0] , e[0] - listing[1]]\n",
+    "        f += [diff_listing]\n",
     "    endpoints += [f]\n",
+    "    \n",
+    "def sort_endpoint(x):\n",
+    "    if len(x) > 0:\n",
+    "        return pd.DataFrame(x).sort_values(1, ascending=False).reset_index(drop=True)\n",
+    "    else:\n",
+    "        return pd.DataFrame([[0 , 0]])\n",
+    "    \n",
+    "endpoint_frames = list (map (sort_endpoint , endpoints))\n",
     "    \n",
     "requests = np.zeros((V , E))\n",
     "\n",
@@ -45,16 +55,15 @@
     "    for j in range (0 , E):\n",
     "        tagged_requests[i , j , 0] = i\n",
     "        tagged_requests[i , j , 1] = j\n",
-    "        tagged_requests[i , j , 2] = requests[i , j] * videos[i]\n",
+    "        tagged_requests[i , j , 2] = requests[i , j] * videos[i] * endpoint_frames[j].ix[0,1]\n",
     "        \n",
     "flat_tags = tagged_requests.reshape(V * E, 3)\n",
-    "sorted_requests = pd.DataFrame(flat_tags).sort_values(2, ascending=False).reset_index(drop=True)\n",
-    "endpoint_frames = list (map ((lambda x: pd.DataFrame(x).sort_values(1).reset_index(drop=True)) , endpoints))"
+    "sorted_requests = pd.DataFrame(flat_tags).sort_values(2, ascending=False).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -65,59 +74,39 @@
     "        break\n",
     "    cache_list = endpoint_frames[sorted_requests.ix[i,1]]\n",
     "    for j in range(0 , len(cache_list.index)):\n",
-    "        if caches[cache_list.ix[j,0]] >= videos[sorted_requests.ix[i,0]]:\n",
-    "            if cache_list.ix[j,0] in results:\n",
-    "                if sorted_requests.ix[i,0] in results[cache_list.ix[j,0]]:\n",
+    "        cache_id = cache_list.ix[j,0]\n",
+    "        video_id = sorted_requests.ix[i,0]\n",
+    "        if caches[cache_id] >= videos[video_id]:\n",
+    "            if cache_id in results:\n",
+    "                if video_id in results[cache_id]:\n",
     "                    break\n",
-    "                caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
-    "                results[cache_list.ix[j,0]] = results[cache_list.ix[j,0]] + [sorted_requests.ix[i,0]]\n",
+    "                caches[cache_id] = caches[cache_id] - videos[video_id]\n",
+    "                results[cache_id] = results[cache_id] + [video_id]\n",
     "            else:\n",
-    "                caches[cache_list.ix[j,0]] = caches[cache_list.ix[j,0]] - videos[sorted_requests.ix[i,0]]\n",
-    "                results[cache_list.ix[j,0]] = [sorted_requests.ix[i,0]]\n",
+    "                caches[cache_id] = caches[cache_id] - videos[video_id]\n",
+    "                results[cache_id] = [video_id]\n",
     "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{30: [5059]}"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "lines = [repr (len(results)) + \"\\n\"]\n",
-    "for val in test:\n",
+    "for val in results:\n",
     "    outline = repr (val)\n",
-    "    for item in test[val]:\n",
+    "    for item in results[val]:\n",
     "        outline += \" \" + repr (item)\n",
     "    lines += [outline + \"\\n\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -126,6 +115,104 @@
     "outfile = open(\"kittens.out\", \"w\")\n",
     "outfile.writelines(lines)\n",
     "outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>789</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0    1\n",
+       "0  1  991\n",
+       "1  0  843\n",
+       "2  2  789"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "endpoint_frames[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1\n",
+       "0  0  0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([[0 , 0]])"
    ]
   },
   {
